docusaurus-docs/docs/agent/v2/ubuntu.mdx
# Installing Buildkite Agent on Ubuntu

>🚧 This page references the out-of-date Buildkite Agent v2.
> For docs referencing the Buildkite Agent v3, <a href="/docs/agent/v3/ubuntu">see the latest version of this document</a>.

The Buildkite Agent can be installed on Ubuntu versions 14.04 and above using our signed apt repository.

{:toc}

## Installation

Download the Buildkite PGP key to a directory that is only writable by `root` (create the directory before running the following command if it doesn't already exist):

```shell
wget -O- https://keys.openpgp.org/vks/v1/by-fingerprint/32A37959C2FA5C3C99EFBC32A79206696452D198 | sudo tee /usr/share/keyrings/buildkite-agent-archive-keyring.gpg
```

Then add the signed source to your list of apt sources:

```shell
echo "deb [signed-by=/usr/share/keyrings/buildkite-agent-archive-keyring.gpg] https://apt.buildkite.com/buildkite-agent stable main" | sudo tee /etc/apt/sources.list.d/buildkite-agent.list
```

And install the Buildkite agent:

```shell
sudo apt-get update && sudo apt-get install -y buildkite-agent
```

Then configure your agent token:

```shell
sudo sed -i "s/xxx/INSERT-YOUR-AGENT-TOKEN-HERE/g" /etc/buildkite-agent/buildkite-agent.cfg
```

And then start the agent:

```shell
# Ubuntu 15.04+ (systemd)
sudo systemctl enable buildkite-agent && sudo systemctl start buildkite-agent

# Older Ubuntu (upstart)
sudo service buildkite-agent start
```

You can view the logs at:

```shell
# Ubuntu 15.04+ (systemd)
journalctl -f -u buildkite-agent

# Older Ubuntu (upstart)
tail -f /var/log/upstart/buildkite-agent.log
```

## Updating keys installed using apt-key

If you've previously installed keys using `apt-key`, move the Buildkite agent key from `/etc/apt/trusted.gpg` or `/etc/apt/trusted.gpg.d/` to `/usr/share/keyrings/buildkite-agent-archive-keyring.gpg`, making sure that both that file and directory are only writable by `root`.

Update your Buildkite agent entries in `/etc/apt/sources.list.d/buildkite-agent.list` to:

```shell
deb [signed-by=/usr/share/keyrings/buildkite-agent-archive-keyring.gpg] https://apt.buildkite.com/buildkite-agent stable main
```

## SSH key configuration

<%= render_markdown partial: 'agent/v2/ssh_key_with_buildkite_agent_user' %>

See the [Agent SSH keys](/docs/agent/v2/ssh-keys) documentation for more details.

## File locations

<%= render_markdown partial: 'agent/v2/apt_locations' %>

## Configuration

<%= render_markdown partial: 'agent/v2/apt_configuration' %>

## Running multiple agents

You can run as many parallel agents on the one machine as you wish by duplicating the upstart service configuration file, for example:

```shell
# For Ubuntu 15.04 and above (using systemd)

# Disable the default unit
sudo systemctl stop buildkite-agent && sudo systemctl disable buildkite-agent

# Create a systemd template
sudo cp /lib/systemd/system/buildkite-agent.service /etc/systemd/system/buildkite-agent@.service

# Now, as many times as you like
sudo systemctl enable --now buildkite-agent@1
sudo systemctl enable --now buildkite-agent@2

# Follow them all
sudo journalctl -f -u "buildkite-agent@*"

# Or one-by-one
sudo journalctl -f -u buildkite-agent@2

# For older Ubuntu (using upstart)
sudo cp /etc/init/buildkite-agent.conf /etc/init/buildkite-agent-2.conf
sudo service buildkite-agent-2 start
sudo tail -f /var/log/upstart/buildkite-agent-2.log
```

## Upgrading

<%= render_markdown partial: 'agent/v2/apt_upgrading' %>
